gatekeeper/bad-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bad-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bad-app
  template:
    metadata:
      labels:
        app: bad-app
    spec:
      containers:
        - name: bad-app
          image: nginx:latest
