gatekeeper/good-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: good-app
  template:
    metadata:
      labels:
        app: good-app
    spec:
      containers:
        - name: good-app
          image: redis:7
